--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin:400,500,700|Lobster');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,700');
 
 .container {
     /* width: 960px; */
     margin: 0 auto;
     overflow: hidden;
+    font-family: "Work", sans-serif;
 }
 
 .container-mid {
@@ -41,6 +43,7 @@ nav a {
 
 h1 {
     font-size: 72px;
+    line-height: 91px;
     background: linear-gradient(to right, #ec2F4B, #F0CB35);
     /* background: linear-gradient(330deg, #00FF3E 0%, #FF8C00 50%, #FF0080 100%); */
     -webkit-background-clip: text;
@@ -54,34 +57,57 @@ h3 {
 
 #who-i-am {
     padding: 40px 40px 0;
-    background-color: #16a085;
+    background: linear-gradient(to top, #1D976C, #93F9B9);
+    /* background-color: linear-gradient(to right, #1abc9c, #16a085); */
+}
+
+.who-i-am-container {
+    display: flex;
+    flex-wrap: wrap-reverse;
+}
+
+.who-i-am-photo img {
+    margin-top: 40px;
+    border-radius: 20px;
+}
+
+.who-i-am-info {
+    width: 300px;
+    margin-left: 50px;
+    border: 1px solid black;
+    border-radius: 15px;
 }
 
 .span-sections-1 {
     margin: 0;
     padding: 0;
     border: 1px solid red;
-    border-width: 0 0 200px 2000px;
-    border-color: transparent transparent #e74c3c transparent;
-    background-color: #16a085;
+    border-width: 0 0 150px 2000px;
+    border-color: transparent transparent #ef473a transparent;
+    background-color: #1D976C;
+    /* background: linear-gradient(to right, #1abc9c, #16a085);  */
 }
+   
 
 .span-sections-2 {
     margin: 0;
     padding: 0;
     border: 1px solid red;
-    border-width: 0 2000px 200px 0;
-    border-color: transparent transparent #34495e transparent;
-    background-color: #e74c3c;
+    border-width: 0 2000px 150px 0;
+    border-color: transparent transparent #2c3e50 transparent;
+    background-color: #cb2d3e;
 }
 
 #projects {
-    background-color: #e74c3c;
+    /* background-color: #e74c3c; #c0392b */
+    background: linear-gradient(to top, #cb2d3e, #ef473a);
 }
 
 footer {
-    background-color: #34495e;
+    background: linear-gradient(to top, #34495e, #2c3e50);
+    /* background-color: #34495e; */
     margin: 0;
+    height: 300px;
 }
 
 footer ul {
