--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin:400,500,700|Lobster');
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
 
 .container {
     /* width: 960px; */
     margin: 0 auto;
-    overflow: hidden;
-    font-family: "Work", sans-serif;
+    /* overflow: hidden; */
+    font-family: "Lato", sans-serif;
 }
 
 .container-mid {
@@ -15,33 +16,51 @@
 
 nav {
     font-family: "Lobster", cursive, sans-serif;
-    background: linear-gradient(to right, #56ccf2, #2f80ed); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: 260px;
+    background: linear-gradient(to bottom, #56ccf2, #2f80ed); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    height: 140px;
     text-align: center;
     color: white;
 }
 
 nav ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    width: 450px;
+    height: 30px;
+    transform: translate(0px, -2px);
+    border-radius: 5px;
+    background-color: white;
     padding: 10px;
-    margin: 0;
+    margin: 0 auto;
+    box-shadow: 0px 0px 35px -8px #000000;
 }
 
 nav ul li {
-    display: inline;
+    list-style-type: none;
+}
+
+
+nav ul li a {
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #576574;
+    font-family: "Lato", sans-serif;
+    border-radius: 5px;
+    padding: 7px 10px;
 }
 
 nav ul li a:hover {
-    text-decoration: underline
-}
-
-nav a {
-    text-decoration: none;
     color: white;
-    margin-right: 30px;
-    font-family: "Cabin", sans-serif;
+    background-color: #2f80ed;
+    transition: ease .3s;
 }
 
 h1 {
+    margin: 0 0 20px;
+    padding: 20px 0 0;
     font-size: 72px;
     line-height: 91px;
     background: linear-gradient(to right, #ec2F4B, #F0CB35);
@@ -59,41 +78,66 @@ h3 {
     padding: 40px 40px 0;
     background: linear-gradient(to top, #1D976C, #93F9B9);
     /* background-color: linear-gradient(to right, #1abc9c, #16a085); */
+    height: 300px;
 }
 
 .who-i-am-container {
+    margin-top: 40px;
     display: flex;
-    flex-wrap: wrap-reverse;
+    height: 300px;
+    
+}
+
+.who-i-am-photo {
+    display: block;
+    float: left;
+    width: 400px;
+    transform: translate(-40px, -80px);
 }
 
 .who-i-am-photo img {
+    width: 100%;
     margin-top: 40px;
     border-radius: 20px;
+    box-shadow: 0px 0px 35px -8px #000000;
 }
 
 .who-i-am-info {
-    width: 300px;
+    color: #576574;
+    background-color: white;
+    box-shadow: 0px 0px 35px -8px #000000;
+
+    padding: 20px;
+    /* width: 300px; */
     margin-left: 50px;
-    border: 1px solid black;
+    /* border: 1px solid #576574; */
     border-radius: 15px;
+}
+
+.span-sections-0 {
+    margin: 0;
+    padding: 0;
+    border: 1px solid transparent;
+    border-width: 0 100vw 40px 0;
+    border-color: transparent #2f80ed transparent transparent;
+    background-color: #93F9B9;
 }
 
 .span-sections-1 {
     margin: 0;
     padding: 0;
     border: 1px solid red;
-    border-width: 0 0 150px 2000px;
+    border-width: 0 0 100px 100vw;
     border-color: transparent transparent #ef473a transparent;
     background-color: #1D976C;
     /* background: linear-gradient(to right, #1abc9c, #16a085);  */
 }
-   
 
 .span-sections-2 {
     margin: 0;
     padding: 0;
     border: 1px solid red;
-    border-width: 0 2000px 150px 0;
+    border-width: 0 100vw 100px 0;
     border-color: transparent transparent #2c3e50 transparent;
     background-color: #cb2d3e;
 }
